# privacy-clean

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
public/: 404.html  index.html  manifest.json  privacy.html  remove-exif-android.html  remove-exif-iphone.html  robots.txt  sitemap.xml  strip-pdf-metadata.html  sw.js  terms.html
public/css/: shared.css
public/js/: app.js  landing-shared.js
public/wasm/: package.json  privacy_clean_wasm.d.ts  privacy_clean_wasm.js  privacy_clean_wasm_bg.wasm  privacy_clean_wasm_bg.wasm.d.ts
src/: index.ts
src/lib/: email.ts  jwt.ts  paddle.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
