[package]
name = "privacy-clean-wasm"
version = "0.1.0"
edition = "2021"
description = "High-performance EXIF/PDF metadata stripper compiled to WebAssembly"
authors = ["PrivacyClean"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
strip = true           # Strip debug info
codegen-units = 1      # Maximum optimization
wasm-opt = false       # Disable wasm-opt (binaryen compatibility issue)
